# africa-api-mcp

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  server.json  server.py
src/: index.ts
