[project]
name = "africa-api-mcp"
version = "0.1.0"
description = "MCP server for Africa API - access African country data, indicators, markets, trade, government, elections, and policies through Claude"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
africa-api-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
